@@ -5,7 +5,7 @@ AC_CONFIG_SRCDIR([src/dcadec.c])
 AC_CONFIG_AUX_DIR(autotools)
 AC_CONFIG_FILES([Makefile autotools/Makefile include/Makefile test/Makefile
     src/Makefile libdca/Makefile libao/Makefile vc++/Makefile
-    debian/Makefile libdca/libdca.pc libdca/libdts.pc])
+    libdca/libdca.pc libdca/libdts.pc])
 AM_INIT_AUTOMAKE([1.5 dist-bzip2 no-dist-gzip check-news -Wall])
 AM_CONFIG_HEADER(config.h)
 AM_MAINTAINER_MODE
