@@ -1,1 +1,0 @@
-EXTRA_DIST = control rules changelog copyright compat
