@@ -1,6 +1,0 @@
-libdts (0.0.2-svn-1) unstable; urgency=low
-
-  * Initial release (Closes: #232256).
-
- -- Sam Hocevar (Debian packages) <sam+deb@zoy.org>  Tue, 24 Feb 2004 20:33:44 +0100
-
